--- a/css/reportsStyle.css
+++ b/css/reportsStyle.css
@@ -57,6 +57,7 @@ form {
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 1em;
+    margin-top: 20px;
 }
 
 label {
@@ -90,22 +91,24 @@ button[type="submit"] {
     border: none;
     border-radius: 20px;
     padding: 6px 15px;
-    font-size: 14px;
+    font-size: 10px;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
-    margin-left: 15px;
+    float: right;
+    margin-top: -32px;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
+    font-size: 14px;
 }
 
 th,
 td {
     text-align: left;
-    padding: 0.5em;
-    border: 1px solid #ccc;
+    padding: 0.3em;
+    border: 0.5px solid #ccc;
 }
 
 th {
@@ -114,7 +117,7 @@ th {
 
 #dateSortErrorMessage {
     color: #f00;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: bold;
     width: 260px;
     height: 15px;
